[project]
name = "WPP_Whatsapp"
version = "1.0.2"
description = "WPP_Whatsapp aim of exporting functions from WhatsApp Web to the python"
requires-python = ">=3.9"
authors = [
    {name = "Ammar Alkotb", email = "ammar.alkotb@gmail.com"}
]
license = {text = "MIT License"}
dependencies = [
    "aiohttp>=3.10.11",
    "event-emitter-js>=0.1.2",
    "node-semver>=0.9.0",
    "pillow>=10.4.0",
    "playwright>=1.48.0",
    "playwright-stealth>=1.0.6",
    "playwrightsafethread>=0.5.5",
    "psutil>=7.2.2",
    "pyee>=12.0.0",
    "requests>=2.32.4",
    "segno>=1.6.6",
    "typing-extensions>=4.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/3mora2/WPP_Whatsapp"
"Bug Report" = "https://github.com/3mora2/WPP_Whatsapp/issues/new"

[project.readme]
file = "README.md"
content-type = "text/markdown"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["WPP_Whatsapp*"]
exclude = ["archive*", "tests*", "examples*"]

[tool.setuptools.package-data]
WPP_Whatsapp = ["*/*.js", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
